--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
     <div id="div1">  <h1 id="h1">
         RESUME BUILDING</h1>
-      <a href="form.html" id="id1" >  <img id="img1" src="resumepic.png"></a>
+      <a href="form.html" id="id1" >  <img id="img1" src="Resumepic.png"></a>
 <p>Click On Image To Get Form For Resume</p></div>
 
 <!-- card view design -->
